# GOAT-TS-DEVELOPMENT

./: .gitignore  OPTIMIZATION.md  README.md  benchmark.py  config.yaml  requirements.txt  run.py  run_tests.py
examples/: sample_usage.py
examples/raw_texts/: sample.txt
python/: chat_ingest.py  generate_dataset.py
python/bindings/: __init__.py  rust_bindings.py
python/goat_ts_cig/: __init__.py  cig_generator.py  config.py  hypothesis_engine.py  interface.py  knowledge_graph.py  main.py  ts_engine.py  utils.py
rust/: Cargo.toml  pyproject.toml
rust/src/: graph_engine.rs  lib.rs  wave_engine.rs
tests/: __init__.py  test_cig.py  test_data_gen.py
