[package]
name = "goat-ts-core"
version = "1.0.0"
edition = "2021"
description = "Rust core for GOAT-TS CIG: graph and wave propagation"

[lib]
name = "goat_ts_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
petgraph = "0.6"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"

[build-dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
